<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ScrapbookApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="android_logo">Android Logo</string>
    <string name="taj">TajMahal,Agra,India</string>
	  <string name="tower">London,UK</string>
	    <string name="pyramids">Egypt</string>
	      <string name="eiffel">Paris</string>
</resources>
